force-app/main/default/objects/SDOC__SDTemplate__c.object
<CustomObject>
    <fields>
        <fullName>SDOC__Template_Format__c</fullName>
        <description>Output format of the generated documents. To support multiple formats, simply clone the template with a different Format field value.</description>
        <inlineHelpText>Output format of the generated documents. To support multiple formats, simply clone the template with a different Format field value.</inlineHelpText>
        <label>Template Format</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>DOC</fullName>
                </value>
                <value>
                    <fullName>HTML</fullName>
                </value>
                <value>
                    <fullName>DOCX</fullName>
                </value>
                <value>
                    <fullName>XLS</fullName>
                </value>
                <value>
                    <fullName>XML</fullName>
                </value>
                <value>
                    <fullName>CSV</fullName>
                </value>
                <value>
                    <fullName>PPT</fullName>
                </value>
                <value>
                    <fullName>Component</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDOC__Template_XML10__c</fullName>
        <label>TemplateXML10</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Template_XML2__c</fullName>
        <label>TemplateXML2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Template_XML3__c</fullName>
        <label>TemplateXML3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Template_XML_Encode10__c</fullName>
        <label>Template XML Encode10</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Template_XML_Encode2__c</fullName>
        <label>Template XML Encode2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Template_XML_Encode3__c</fullName>
        <label>Template XML Encode3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Terms_XML_Encode__c</fullName>
        <label>Terms_XML_Encode</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Terms_XML__c</fullName>
        <description>Terms and Conditions</description>
        <label>Terms_XML</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__TranslationTags__c</fullName>
        <label>TranslationTags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Unicode_Level__c</fullName>
        <label>Unicode Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Strict</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDOC__User_Choice_Definitions__c</fullName>
        <label>User Choice Definitions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Version_History_Keep_Limit__c</fullName>
        <description>Limits the number of versions to keep in the &apos;Version History&apos; related list.</description>
        <inlineHelpText>Limits the number of versions to keep in the &apos;Version History&apos; related list.</inlineHelpText>
        <label>Version History Keep Limit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Disable Version History</fullName>
                    <default>true</default>
                    <label>Disable Version History</label>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>Unlimited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDOC__Version__c</fullName>
        <description>Use this field to track any internally used version number (or date) for this template. It only used for reference purposes.</description>
        <inlineHelpText>Use this field to track any internally used version number (or date) for this template. It only used for reference purposes.</inlineHelpText>
        <label>Document Version</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share_with__c</fullName>
        <description>The field is used in Sharing Rules for template lists available for schools in generating docs process</description>
        <label>Share with</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Schools</fullName>
                </value>
                <value>
                    <fullName>The British International School of Kuala Lumpur</fullName>
                </value>
                <value>
                    <fullName>The British School of Tashkent</fullName>
                </value>
                <value>
                    <fullName>The British School of Nanjing</fullName>
                </value>
                <value>
                    <fullName>The International School of Moscow</fullName>
                </value>
                <value>
                    <fullName>Nord Anglia International School Manila</fullName>
                </value>
                <value>
                    <fullName>The British International School of Marbella</fullName>
                </value>
                <value>
                    <fullName>The British School of Navarra</fullName>
                </value>
                <value>
                    <fullName>The British School of Yangon</fullName>
                </value>
                <value>
                    <fullName>The British School of Brasilia</fullName>
                </value>
                <value>
                    <fullName>The British College of Brazil</fullName>
                </value>
                <value>
                    <fullName>The New York International School</fullName>
                </value>
                <value>
                    <fullName>BSG Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SDoc Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SDOC__Description__c</columns>
        <columns>SDOC__Document_Category__c</columns>
        <columns>SDOC__Base_Object__c</columns>
        <columns>SDOC__Active__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SDOC__All</fullName>
        <columns>SDOC__Format_Icon__c</columns>
        <columns>NAME</columns>
        <columns>SDOC__Base_Object__c</columns>
        <columns>SDOC__Version__c</columns>
        <columns>SDOC__Active__c</columns>
        <columns>SDOC__Default__c</columns>
        <columns>SDOC__Create_Attachment__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SDOC__Master_Template__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>SDOC__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Templates</label>
    </listViews>
    <listViews>
        <fullName>SDOC__All_Inactive_Templates</fullName>
        <columns>SDOC__Format_Icon__c</columns>
        <columns>NAME</columns>
        <columns>SDOC__Base_Object__c</columns>
        <columns>SDOC__Version__c</columns>
        <columns>SDOC__Active__c</columns>
        <columns>SDOC__Default__c</columns>
        <columns>SDOC__Create_Attachment__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SDOC__Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>SDOC__Master_Template__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Inactive Templates</label>
    </listViews>
    <listViews>
        <fullName>SDOC__Archived_Templates</fullName>
        <columns>SDOC__Format_Icon__c</columns>
        <columns>NAME</columns>
        <columns>SDOC__Base_Object__c</columns>
        <columns>SDOC__Version__c</columns>
        <columns>SDOC__Active__c</columns>
        <columns>SDOC__Default__c</columns>
        <columns>SDOC__Create_Attachment__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SDOC__Master_Template__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Archived Templates</label>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>S-Docs Templates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>